fix: delete post, align item

--- a/client/src/assets/Item.module.css
+++ b/client/src/assets/Item.module.css
@@ -5,19 +5,19 @@
 
 @media (max-width: 1800px) {
   .itemContainer {
-   padding: 0 145px;
+    padding: 0 145px;
   }
 }
 
 @media (max-width: 999px) {
   .itemContainer {
-   padding: 0 75px;
+    padding: 0 75px;
   }
 }
 
 @media (max-width: 599px) {
   .itemContainer {
-   padding: 0 30px;
+    padding: 0 30px;
   }
 }
 
@@ -52,7 +52,7 @@
 .nft {
   width: 100%;
   height: 300px;
-  margin: 0 auto;
+  margin: 1rem auto;
   box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.15) !important;
   cursor: pointer;
 }
